apps/immich/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    app: immich
