apps/immich/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: immich.mbtux.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-web
            port:
              number: 3000
